Create ComponentUtils#format
- Create ComponentUtils#format and everything that goes with it
- Make ComponentColor#<color> use it
- Create ComponentColor#color(TextColor, ...) which calls the same
  methods as the other colors.
- Convert anything using the old ComponentColor to the new format (vim
  macros ftw)